Mejoras para modo desarrollo, inicio refactorización